<resources>

    <string name="event_search">Event Search</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="search">Search</string>
    <string name="please_enter_city_name">Please enter the city name</string>
    <string name="start_date">Start Date: </string>
    <string name="min_price">Min Price: </string>
    <string name="max_price">Max Price: </string>
    <string name="open_url">Open URL</string>
    <string name="no_events_found">No events found!</string>
    <string name="events_loaded">Events loaded!</string>


    <string name="app_name">AndroidFinalProject_20F</string>
    <string name="album_search">Album Search</string>
    <string name="enter_artist_name_here">Enter Artist Name here</string>
    <string name="search_albums">Search Albums</string>

    <string name="wantdelete">Do you want to delete the row?</string>
    <string name="selectedrow">The selected row is</string>
    <string name="thedatabaseid">The database id is</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="additionalDetail">Additional Details of Selected Row:</string>
    <string name="covidToastMessage">Fill the fields to Search</string>
    <string name="covidSnackBarMsg">Select and Hold on Row for More Details</string>

    <string name="cst_2335_android_final_project">CST_2335 Android Final Project</string>
    <string name="ticketmaster_event_search">TicketMaster event search</string>
    <string name="recipe_search">Recipe search</string>
    <string name="covid_19_case_data_search">Covid-19 Case Search</string>
    <string name="the_audio_database_search">The Audio database search</string>
    <string name="rs_please_enter_recipe_name">Please enter recipe name</string>
    <string name="rs_welcome_recipe_search_by_ahmed">Hello!!\nWelcome to the Recipe Search by Ahmed.</string>
    <string name="covidOpen">Open</string>
    <string name="covidClose">Close</string>
    <string name="covidTitle">Covid-19 case Data</string>
    <string name="covidAuthor">Chrishanthi Michael</string>
    <string name="covidVersionNum">Version 1</string>
    <string name="covidWelcome">Welcome to Covid-19 case Data</string>
    <string name="covidCountry">Country:</string>
    <string name="enterCovidCountry">Enter the Country Name</string>
    <string name="Cfrom">From:</string>
    <string name="cto">To:</string>
    <string name="Csearch">SEARCH</string>
    <string name="covidHistoryView">View Search History</string>
    <string name="covidResults">List of search results:</string>

    <string name="rs_ingredients">Ingredients: </string>
    <string name="rs_details">Details</string>
    <string name="rs_no_recipy">No recipies found!</string>
    <string name="rs_loading">Loading…</string>
    <string name="rs_recipe_search">Recipe Search</string>
    <string name="rs_enter_recipe_name">Enter recipe name</string>
    <string name="rs_enter_ingredients_separated_by_comma">Enter ingredients separated by comma</string>
    <string name="rs_search">Search</string>

    <string name="as_album_details">Album Details</string>
    <string name="as_id">ID: "</string>
    <string name="as_position">Position: "</string>
    <string name="as_title">Album Title: </string>
    <string name="as_year">Album Year: </string>
    <string name="as_description">Album Description: </string>
    <string name="as_genre">Album Genre: </string>
    <string name="as_sale">Album Sale: </string>
    <string name="as_snackbar_message">"Showing the albums for artist: "</string>
    <string name="as_please_enter_album_name">Please enter the artist name</string>

    <string name="as_hide">Hide</string>
    <string name="as_add_or_remove_from_database">Add or Remove from database</string>
    <string name="as_show_database_stored_albums">Show database stored albums</string>
    <string name="as_no_albums_in_db">There are no albums in the database</string>
    <string name="as_version_1">Version: 1</string>
    <string name="as_name_vetti">Name: Vetti</string>
    <string name="as_instructions">Instructions</string>
    <string name="as_ok">Ok</string>
    <string name="as_close">Close</string>
    <string name="as_open">Open</string>
    <string name="as_get_songs">Get songs</string>
    <string name="as_showing_songs_for_selected">Showing songs for selected album</string>
    <string name="as_instruction_description">This screen hows list of the albums. You can click on a particular album to open details.</string>
    <string name="as_instruction_description_songs">This screen hows list of the songs. You can click on a particular song to search it on google.</string>
    <string name="albumInstruction">Instruction</string>
    <string name="albumhelpmessage">Enter the Artist name and click \"Search Album\" button to begin search.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="covidInstruction">Instruction:</string>
    <string name="cwInstuction">Enter the Country name and dates in (YYYY-MM-DD) format. Then hit Search</string>
    <string name="CviewHis_instruction">Select a date from the list and click to view saved results.</string>
    <string name="C_caseData_instruction">click and hold on any below list for more info. Click on \"View Search History\" to view results by date.</string>
    <string name="album_Search_main">Album Search</string>
    <string name="cHome">Home</string>
    <string name="cHelp">Help</string>
    <string name="cView_history">View history</string>
    <string name="cDate">The date is :</string>
    <string name="cConfirmedCase">The Confirmed Case Number :</string>
    <string name="cProvince">The province is :</string>
    <string name="cOK">OK</string>
    <string name="cDelete">DELETE</string>

    <string name="rs_favorites">Favorites</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="rs_fav_list_info">This screen shows the list of the favorite recipes. You can click on the single recipe, it will show some more details about it.</string>
    <string name="rs_seach_list_info">This screen shows the list of the various recipes for the searched one. You can click on the single recipe, it will show some more details about it.</string>
    <string name="rs_search_screen_info">Welcome to the Recipe Search\nEnter Recipe name and ingredients to search recipes\nClick on Favorite Button,to see favorite recipes</string>
    <string name="rs_we_already_home">We are already at Recipe Search</string>
    <string name="rs_continue">Continue</string>
    <string name="rs_remove_from_fav">Remove From Favorites</string>
    <string name="rs_title">Title</string>
    <string name="rs_recipe_removed">Recipe Removed From Favorites</string>
    <string name="rs_recipy_already_added">Recipe Already Added to Favorites</string>
    <string name="rs_unable_to_add_fav">Unable to Add to Favorites</string>
    <string name="rs_added_to_fav">Recipe Added to the Favorites</string>

    <string name="event_name">Event Name</string>
    <string name="save_event_to_database">Save Event to Database</string>
    <string name="hide_event_details">Hide Event Details</string>
    <string name="show_saved_events">Show saved events</string>
    <string name="eventOpen">open</string>
    <string name="eventClose">close</string>
    <string name="eventInstruction">Instruction</string>
    <string name="eventInstmsg">Write the city name and click search</string>
    <string name="EventTitle">Event Search Activity</string>
    <string name="EventVersion">Version1</string>
    <string name="EventURLButton">Go To Event Page</string>
    <string name="EventSaveButton">Save Event</string>
    <string name="eventListView">Do you want to delete the city?</string>
    <string name="rs_webpage">Recipe Details Webpage</string>
    <string name="rs_addToFav">Add to Favorite</string>
    <string name="rs_author">Author: Ahmed Akad</string>
    <string name="as_remove_msg">Removed the album from database</string>
    <string name="as_save_to_db_msg">Saved the album into database</string>


</resources>