<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sabiha.EventSearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/eventToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">
    <!-- THIS IS WHAT IS VISIBLE ON SCREEN:-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/event_search"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cityNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="32dp"
        android:hint="@string/enter_city_name" />

    <Button
        android:id="@+id/searchEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/search" />

    <Button
        android:id="@+id/savedEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/show_saved_events" />


    </LinearLayout>

        <!-- THIS IS WHAT IS WHAT POPS OUT FROM THE SIDE:-->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/eventauthor"
            app:menu="@menu/eventnavigation"
            />
        <!-- app:headerLayout="@layout/header_layout" -->

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>

